--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,7 +8,7 @@ body {
 
 /* Header */
 /* #region Header, Navbar, Button */
-.flex-container {
+.flex-container-header {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -18,7 +18,7 @@ body {
 }
 
 /* Logomarca */
-.flex-container > img {
+.flex-container-header > img {
     height: 20px;
 }
 
@@ -44,8 +44,12 @@ body {
     color: #00aff0;
 }
 
+.nav-container > ul > li > a:active {
+    color: white;
+}
+
 /* Botão do header */
-.flex-container > button {
+.flex-container-header > button {
     color: white;
     background-color: #002050;
     padding: 8px 20px;
@@ -53,16 +57,16 @@ body {
     margin-right: 20px;
 }
 
-.flex-container > button:hover {
+.flex-container-header > button:hover {
     background-color: #0093be;
 }
 
-.flex-container > button:active {
+.flex-container-header > button:active {
     background-color: #002050;
 }
 /* #endregion Header, Navbar, Button */
 
-.main > #primeiraImagem {
+.main > .landingPage > #primeiraImagem {
     width: 100%;
     height: 100vh;
 }
