--- a/estilos/style.css
+++ b/estilos/style.css
@@ -66,7 +66,61 @@ body {
 }
 /* #endregion Header, Navbar, Button */
 
+/* Landing page */
+
+/* Imagem de fundo - landing page */
 .main > .landingPage > #primeiraImagem {
     width: 100%;
     height: 100vh;
+}
+
+/* Efeito - deixa imagem de fundo escura */
+.main > .landingPage > #vinheta {
+    background: linear-gradient(rgba(0, 0, 0, 0.4) 15%, rgba(0, 0, 0, 1.0) 99%);
+    box-shadow: 0 0 0 rgba(0, 0, 0, 1.0) inset;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    top: 0px;
+}
+
+.main > .landingPage {
+    position: relative;
+}
+
+/* Elementos da landing page - Texto, Botão */
+.main > .landingPage > .landingPage-Elementos {
+    position: absolute;
+    top: 30%;
+    margin-left: 5%;
+}
+
+.main > .landingPage > .landingPage-Elementos > h1 {
+    font-size: 100px;
+    color: white;
+    margin: 0px 0px 20px 0px;
+}
+
+.main > .landingPage > .landingPage-Elementos > h3 {
+    font-size: 35px;
+    color: white;
+    margin: 0px 0px 80px 0px;
+
+}
+
+/* Botão landing page */
+.main > .landingPage > .landingPage-Elementos > button {
+    color: white;
+    background-color: #00a4ef;
+    padding: 15px 30px;
+    border: none;
+    font-size: 30px;
+}
+
+.main > .landingPage > .landingPage-Elementos > button:hover {
+    background-color: #2571b7;
+}
+
+.main > .landingPage > .landingPage-Elementos > button:active {
+    background-color: #00a4ef;
 }
