--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,13 +1,13 @@
-* {
-    box-sizing: border-box;
-}
-body {
+
+html, body {
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
 /* Header */
 /* #region Header, Navbar, Button */
+
 .flex-container-header {
     display: flex;
     flex-direction: row;
@@ -20,21 +20,28 @@ body {
 /* Logomarca */
 .flex-container-header > img {
     height: 20px;
+    margin-left: 5%;
 }
 
 /* Menus de navegação */
+
+.nav-container {
+    margin-left: 40%;
+}
+
 .nav-container > ul {
     list-style-type: none;
-    margin: 0px 0px 0px 300px;
     padding: 0px;
+    margin: 0px;
 }
 
 .nav-container > ul > li {
-    display: inline;
+  display: inline;
 }
 
 .nav-container > ul > li > a {
-    margin: 20px;
+    display: inline-block;
+    margin: 10px 20px;
     color: white;
     text-decoration: none;
     align-items: center;
@@ -54,7 +61,7 @@ body {
     background-color: #002050;
     padding: 8px 20px;
     border: none;
-    margin-right: 20px;
+    margin-right: 5%;
 }
 
 .flex-container-header > button:hover {
@@ -67,11 +74,20 @@ body {
 /* #endregion Header, Navbar, Button */
 
 /* Landing page */
+/* #region Landing Page, Elementos */
+
+.main > .landingPage {
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
 
 /* Imagem de fundo - landing page */
 .main > .landingPage > #primeiraImagem {
     width: 100%;
     height: 100vh;
+    grid-column-start: 1;
+    grid-column-end: 3;
 }
 
 /* Efeito - deixa imagem de fundo escura */
@@ -84,14 +100,10 @@ body {
     top: 0px;
 }
 
-.main > .landingPage {
-    position: relative;
-}
-
 /* Elementos da landing page - Texto, Botão */
 .main > .landingPage > .landingPage-Elementos {
     position: absolute;
-    top: 30%;
+    top: 25%;
     margin-left: 5%;
 }
 
@@ -124,3 +136,48 @@ body {
 .main > .landingPage > .landingPage-Elementos > button:active {
     background-color: #00a4ef;
 }
+
+.main > .landingPage > .landingPage-Elementos > #landingPage-Logomarca {
+    
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+/* Logomarca na landing page */
+.main > .landingPage > #landingPage-Logomarca {
+    position: absolute;
+    bottom: 8%;
+    right: 20%;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    align-items: center;
+}
+
+/* Flecha indicação scroll down */
+.main > .landingPage > #landingPage-Flecha {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    bottom: 7%;
+    left: 5%;
+}
+
+/* Chamada animação flecha */
+.main > .landingPage > #landingPage-Flecha {
+    animation: apaga 0.5s;
+    animation-iteration-count: 3;
+    animation-fill-mode: forwards;
+}
+
+/* Animação Flecha */
+
+@keyframes apaga {
+    from{
+        opacity: 0.5;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+/* #endregion Landing Page, Elementos */
