--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,6 +5,27 @@ html, body {
     box-sizing: border-box;
 }
 
+html {
+    font-size: 62.5%;
+}
+
+@font-face {
+    font-family: 'sego';
+    src: url('../fonts/segoeui.ttf') format('TrueType');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body {
+    font-family: 'sego', sans-serif;
+}
+
+@media (max-width: 400px){
+    html {
+        font-size: 50%;
+    }
+}
+
 /* Header */
 /* #region Header, Navbar, Button */
 
@@ -45,6 +66,7 @@ html, body {
     color: white;
     text-decoration: none;
     align-items: center;
+    font-size: 1.3rem;
 }
 
 .nav-container > ul > li > a:hover {
@@ -80,6 +102,7 @@ html, body {
     position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    align-items: center;
 }
 
 /* Imagem de fundo - landing page */
@@ -103,20 +126,21 @@ html, body {
 /* Elementos da landing page - Texto, Botão */
 .main > .landingPage > .landingPage-Elementos {
     position: absolute;
-    top: 25%;
     margin-left: 5%;
 }
 
 .main > .landingPage > .landingPage-Elementos > h1 {
-    font-size: 100px;
+    font-size: 6rem;
     color: white;
     margin: 0px 0px 20px 0px;
+    font-family: 'sego';
 }
 
 .main > .landingPage > .landingPage-Elementos > h3 {
-    font-size: 35px;
+    font-size: 3rem;
     color: white;
     margin: 0px 0px 80px 0px;
+    font-weight: normal;
 
 }
 
@@ -126,7 +150,7 @@ html, body {
     background-color: #00a4ef;
     padding: 15px 30px;
     border: none;
-    font-size: 30px;
+    font-size: 2.5rem;
 }
 
 .main > .landingPage > .landingPage-Elementos > button:hover {
@@ -147,7 +171,7 @@ html, body {
 .main > .landingPage > #landingPage-Logomarca {
     position: absolute;
     bottom: 8%;
-    right: 20%;
+    right: 15%;
     grid-column-start: 2;
     grid-column-end: 3;
     align-items: center;
@@ -191,7 +215,7 @@ html, body {
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    font-size: 20px;
+    font-size: 2rem;
     color: grey;
     margin: 30px 0px;
     padding: 40px;
@@ -206,7 +230,7 @@ html, body {
 /* Titulo Azul */
 .titulo-Azul {
     text-align: center;
-    font-size: 40px;
+    font-size: 3rem;
     color: steelblue;
 }
 
@@ -218,7 +242,7 @@ html, body {
 
 .main > #containerTexto2 > p {
     text-align: center;
-    font-size: 20px;
+    font-size: 2rem;
     color: grey;
     padding: 20px;
     margin: 0px;
@@ -232,9 +256,19 @@ html, body {
 .main > .cardsColoridos {
     margin: 5%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(5, 100px);
+    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
     grid-gap: 20px 40px;
+}
+
+@media (min-width: 1000px){
+    .main > .cardsColoridos {
+        margin: 5%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(5, 100px);
+        grid-gap: 20px 40px;
+    }
 }
 
 /* Deixa todos os cards como flex linha */
@@ -254,7 +288,13 @@ html, body {
     margin: 20px;
 }
 
-.main > .cardsColoridos > :nth-child(n) > div > h4, p {
+.main > .cardsColoridos > :nth-child(n) > div > h4 {
+    font-size: 1.5rem;
+    margin: 5px;
+}
+
+.main > .cardsColoridos > :nth-child(n) > div > p {
+    font-size: 1.3rem;
     margin: 5px;
 }
 
@@ -318,8 +358,24 @@ html, body {
    margin: 8%;
 }
 
+.main > .containerCartoes > :nth-child(1)  h3 {
+    color: #7fba00;
+    font-size: 1.5rem;
+}
+
+.main > .containerCartoes > :nth-child(2)  h3 {
+    color: #00a4ef;
+    font-size: 1.5rem;
+}
+
+.main > .containerCartoes > :nth-child(3)  h3 {
+    color: #ffb900;
+    font-size: 1.5rem;
+}
+
 .main > .containerCartoes > :nth-child(n) > p {
     text-align: center;
+    font-size: 1.3rem;
 }
 
 /* Botões */
@@ -331,6 +387,7 @@ html, body {
     background-color: white;
     border-color: #7fba00;
     border-style: solid;
+    font-size: 1.5rem;
 }
 
 .main > .containerCartoes > :nth-child(1) > div > button:hover {
@@ -339,7 +396,7 @@ html, body {
 }
 
 .main > .containerCartoes > :nth-child(1) > div > button:active {
-    color: #7fba00;
+    color: #00a4ef;
     background-color: white;
 }
 
@@ -351,6 +408,7 @@ html, body {
     background-color: white;
     border-color: #00a4ef;
     border-style: solid;
+    font-size: 1.5rem;
 }
 
 .main > .containerCartoes > :nth-child(2) > div > button:hover {
@@ -371,6 +429,7 @@ html, body {
     background-color: white;
     border-color: #ffb900;
     border-style: solid;
+    font-size: 1.5rem;
 }
 
 .main > .containerCartoes > :nth-child(3) > div > button:hover {
@@ -439,15 +498,28 @@ html, body {
 /* #region tabela-Bordas */
 .main > .tabela-Bordas {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     margin: 2% 8%;
     text-align: center;
 }
 
+@media (max-width: 936px) {
+    .main > .tabela-Bordas {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 2% 15%;
+        text-align: center;
+    }
+}
+
 .main > .tabela-Bordas > :nth-child(n) {
     padding: 2rem;
     border: 2px solid rgba(0, 0, 0, 0.2);
+    font-size: 1.5rem;
 }
 
 /* #endregion tabela-Bordas */
@@ -474,6 +546,8 @@ html, body {
     position: absolute;
     text-align: center;
     color: white;
+    font-size: 5rem;
+    margin: 0px 4rem;
 }
 
 /* #endregion High Five */
@@ -502,6 +576,8 @@ html, body {
     flex-direction: column;
     background-color: #e6e6e6;
     padding: 50px;
+    color: grey;
+    font-size: 1.4rem;
      
 }
 
@@ -521,7 +597,8 @@ input[type= submit] {
     background-color: #00a4ef;
     padding: 15px 30px;
     border: none;
-    font-size: 30px;
+    font-size: 2rem;
+    margin-top: 20px;
 }
 
 input[type= submit]:hover {
@@ -554,6 +631,7 @@ input[type= submit]:active {
 .footer > p {
     text-align: center;
     margin: 20px 0px;
+    color:rgba(0, 0, 0, 0.2);
 }
 
 /* #endregion Footer */
