--- a/estilos/style.css
+++ b/estilos/style.css
@@ -20,11 +20,7 @@ body {
     font-family: 'sego', sans-serif;
 }
 
-@media (max-width: 400px){
-    html {
-        font-size: 50%;
-    }
-}
+
 
 /* Header */
 /* #region Header, Navbar, Button */
@@ -35,32 +31,34 @@ body {
     align-items: center;
     padding: 10px;
     background-color: #2571b7;
-    justify-content: space-around;
+    justify-content: flex-end;
 }
 
 /* Logomarca */
 .flex-container-header > img {
+    position: absolute;
     height: 20px;
-    margin-left: 5%;
+    left: 8%;
 }
 
 /* Menus de navegação */
 
-.nav-container {
-    margin-left: 40%;
+nav {
+    display: flex;
+    margin-right: 100px;
 }
 
-.nav-container > ul {
+nav > ul {
     list-style-type: none;
     padding: 0px;
     margin: 0px;
 }
 
-.nav-container > ul > li {
+nav > ul > li {
   display: inline;
 }
 
-.nav-container > ul > li > a {
+nav > ul > li > a {
     display: inline-block;
     margin: 10px 20px;
     color: white;
@@ -69,11 +67,11 @@ body {
     font-size: 1.3rem;
 }
 
-.nav-container > ul > li > a:hover {
+nav > ul > li > a:hover {
     color: #00aff0;
 }
 
-.nav-container > ul > li > a:active {
+nav > ul > li > a:active {
     color: white;
 }
 
@@ -93,6 +91,9 @@ body {
 .flex-container-header > button:active {
     background-color: #002050;
 }
+
+
+
 /* #endregion Header, Navbar, Button */
 
 /* Landing page */
@@ -105,12 +106,14 @@ body {
     align-items: center;
 }
 
+
 /* Imagem de fundo - landing page */
 .main > .landingPage > #primeiraImagem {
     width: 100%;
     height: 100vh;
     grid-column-start: 1;
     grid-column-end: 3;
+    object-fit: cover;
 }
 
 /* Efeito - deixa imagem de fundo escura */
@@ -253,90 +256,86 @@ body {
 /* #region Cards Coloridos */
 
 /* Container Principal - Grid */
-.main > .cardsColoridos {
-    margin: 5%;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
-    grid-gap: 20px 40px;
+
+.main > .grid-cardsColoridos {
+    display: flex;
 }
 
-@media (min-width: 1000px){
-    .main > .cardsColoridos {
-        margin: 5%;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(5, 100px);
-        grid-gap: 20px 40px;
-    }
+.main > .grid-cardsColoridos > .cardsColoridos {
+    margin: 20px 5px 0px 2px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+    grid-gap: 20px 40px;
+    
 }
 
 /* Deixa todos os cards como flex linha */
-.main > .cardsColoridos > :nth-child(n) {
+.main > .grid-cardsColoridos > .cardsColoridos > :nth-child(n) {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 40px;
+    padding: 20px;
     color: white;
 }
 
 /* Deixa todos os textos dentro dos cards como flex coluna */
-.main > .cardsColoridos > :nth-child(n) > div {
+.main > .grid-cardsColoridos > .cardsColoridos > :nth-child(n) > div {
     display: flex;
     flex-direction: column;
     justify-items: center;
     margin: 20px;
 }
 
-.main > .cardsColoridos > :nth-child(n) > div > h4 {
+.main > .grid-cardsColoridos > .cardsColoridos > :nth-child(n) > div > h4 {
     font-size: 1.5rem;
     margin: 5px;
 }
 
-.main > .cardsColoridos > :nth-child(n) > div > p {
+.main > .grid-cardsColoridos > .cardsColoridos > :nth-child(n) > div > p {
     font-size: 1.3rem;
     margin: 5px;
 }
 
 /* #region Cores Cards */
 /* Card 1 */
-.main > .cardsColoridos > :nth-child(1) {
+.main > .grid-cardsColoridos > .cardsColoridos > :nth-child(1) {
     background-color: #0072c6;
 }
 
-.main > .cardsColoridos > :nth-child(2) {
+.main > .grid-cardsColoridos > .cardsColoridos > :nth-child(2) {
     background-color: #2c5898;
 }
 
-.main > .cardsColoridos > :nth-child(3) {
+.main > .grid-cardsColoridos > .cardsColoridos > :nth-child(3) {
     background-color: #207245;
 }
 
-.main > .cardsColoridos > :nth-child(4) {
+.main > .grid-cardsColoridos > .cardsColoridos > :nth-child(4) {
     background-color: #cb4a32;
 }
 
-.main > .cardsColoridos > :nth-child(5) {
+.main > .grid-cardsColoridos > .cardsColoridos > :nth-child(5) {
     background-color: #733781;
 }
 
-.main > .cardsColoridos > :nth-child(6) {
+.main > .grid-cardsColoridos > .cardsColoridos > :nth-child(6) {
     background-color: #00aff0;
 }
 
-.main > .cardsColoridos > :nth-child(7) {
+.main > .grid-cardsColoridos > .cardsColoridos > :nth-child(7) {
     background-color: #094ab2;
 }
 
-.main > .cardsColoridos > :nth-child(8) {
+.main > .grid-cardsColoridos > .cardsColoridos > :nth-child(8) {
     background-color: #0073c6;
 }
 
-.main > .cardsColoridos > :nth-child(9) {
+.main > .grid-cardsColoridos > .cardsColoridos > :nth-child(9) {
     background-color: #0093be;
 }
 
-.main > .cardsColoridos > :nth-child(10) {
+.main > .grid-cardsColoridos > .cardsColoridos > :nth-child(10) {
     background-color: #5558af;
 }
 
@@ -348,39 +347,50 @@ body {
 /* #region Cartões */
 .main > .containerCartoes {
   display: flex;
-  margin: 2% 8%;
+}
+
+.main > .containerCartoes > :nth-child(n) > .cards-elementos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 10px;
 }
 
 .main > .containerCartoes > :nth-child(n) {
    display: flex;
    flex-direction: column;
    align-items: center;
-   margin: 8%;
 }
 
 .main > .containerCartoes > :nth-child(1)  h3 {
     color: #7fba00;
     font-size: 1.5rem;
+    text-align: center;
 }
 
 .main > .containerCartoes > :nth-child(2)  h3 {
     color: #00a4ef;
     font-size: 1.5rem;
+    text-align: center;
 }
 
 .main > .containerCartoes > :nth-child(3)  h3 {
     color: #ffb900;
     font-size: 1.5rem;
+    text-align: center;
 }
 
-.main > .containerCartoes > :nth-child(n) > p {
+.main > .containerCartoes > :nth-child(n)  p {
     text-align: center;
     font-size: 1.3rem;
 }
 
+
+
 /* Botões */
-.main > .containerCartoes > :nth-child(1) > div > button {
-    width: 100%;
+
+.main > .containerCartoes > :nth-child(1) button {
+    max-width: 250px;
     padding: 10px 5px;
     margin-top: 20px;
     color: #7fba00;
@@ -390,18 +400,18 @@ body {
     font-size: 1.5rem;
 }
 
-.main > .containerCartoes > :nth-child(1) > div > button:hover {
+.main > .containerCartoes > :nth-child(1) button:hover {
     background-color: #7fba00;
     color: white;
 }
 
-.main > .containerCartoes > :nth-child(1) > div > button:active {
+.main > .containerCartoes > :nth-child(1) button:active {
     color: #00a4ef;
     background-color: white;
 }
 
-.main > .containerCartoes > :nth-child(2) > div > button {
-    width: 100%;
+.main > .containerCartoes > :nth-child(2) button {
+    max-width: 250px;
     padding: 10px 5px;
     margin-top: 20px;
     color: #00a4ef;
@@ -411,18 +421,18 @@ body {
     font-size: 1.5rem;
 }
 
-.main > .containerCartoes > :nth-child(2) > div > button:hover {
+.main > .containerCartoes > :nth-child(2) button:hover {
     background-color: #00a4ef;
     color: white;
 }
 
-.main > .containerCartoes > :nth-child(2) > div > button:active {
+.main > .containerCartoes > :nth-child(2) button:active {
     color: #00a4ef;
     background-color: white;
 }
 
-.main > .containerCartoes > :nth-child(3) > div > button {
-    width: 100%;
+.main > .containerCartoes > :nth-child(3) button {
+    max-width: 250px;
     padding: 10px 5px;
     margin-top: 20px;
     color: #ffb900;
@@ -432,12 +442,12 @@ body {
     font-size: 1.5rem;
 }
 
-.main > .containerCartoes > :nth-child(3) > div > button:hover {
+.main > .containerCartoes > :nth-child(3) button:hover {
     background-color: #ffb900;
     color: white;
 }
 
-.main > .containerCartoes > :nth-child(3) > div > button:active {
+.main > .containerCartoes > :nth-child(3) button:active {
     color: #ffb900;
     background-color: white;
 }
@@ -449,10 +459,11 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #7fba00;
-    width: 100px;
-    height: 100px;
-    padding: 20px;
+    width: 70px;
+    height: 60px;
+    padding: 10px;
     border-radius: 50%;
+    margin-right: 10px;
 }
 
 .main > .containerCartoes > :nth-child(1) > .icone > img {
@@ -465,10 +476,11 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #00a4ef;
-    width: 100px;
-    height: 100px;
-    padding: 20px;
+    width: 70px;
+    height: 60px;
+    padding: 10px;
     border-radius: 50%;
+    margin-right: 10px;
 }
 
 .main > .containerCartoes > :nth-child(2) > .icone > img {
@@ -481,10 +493,11 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #ffb900;
-    width: 100px;
-    height: 100px;
-    padding: 20px;
+    width: 70px;
+    height: 60px;
+    padding: 10px;
     border-radius: 50%;  
+    margin-right: 10px;
 }
 
 .main > .containerCartoes > :nth-child(3) > .icone > img {
@@ -503,17 +516,6 @@ body {
     align-items: center;
     margin: 2% 8%;
     text-align: center;
-}
-
-@media (max-width: 936px) {
-    .main > .tabela-Bordas {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 2% 15%;
-        text-align: center;
-    }
 }
 
 .main > .tabela-Bordas > :nth-child(n) {
@@ -542,12 +544,11 @@ body {
     height: auto;
 }
 
-.main > .high-Five > p {
+.main > .high-Five > #wrap-P {
     position: absolute;
-    text-align: center;
     color: white;
-    font-size: 5rem;
-    margin: 0px 4rem;
+    font-size: 3rem;
+    text-align: center;
 }
 
 /* #endregion High Five */
@@ -564,33 +565,47 @@ body {
 /* #region Formulario */
 
 .main > .container-Form {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin: 4% 2%;    
-}
+   background-color: #e6e6e6;
+   padding: 20px; 
+   font-size: 1.4rem; 
+   display: block;
+   text-align: left;
+   max-width: 345px;
+   max-height: 489px;
+   margin: 50px 20px 100px 20px;
+   margin-left: auto;
+   margin-right: auto;
 
-.main > .container-Form > .formulario {
-    display: flex;
-    flex-direction: column;
-    background-color: #e6e6e6;
-    padding: 50px;
-    color: grey;
-    font-size: 1.4rem;
-     
 }
 
 input[type= text] {
-    width: 400px;
-    margin: 5px 0px 25px 0px;
-    padding: 15px;  
+    width: 100%;
+    padding: 12px; 
     border: none;
+    margin: 10px;
 }
 
 input[type= text]:focus {
     outline-color: #00a4ef;
 }
+
+.col-75 {
+    width: 86%;
+    
+}
+
+.col-25 {
+    width: 25%;
+    float: left;
+    margin-left: 10px;
+    
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 
 input[type= submit] {
     color: white;
@@ -598,7 +613,8 @@ input[type= submit] {
     padding: 15px 30px;
     border: none;
     font-size: 2rem;
-    margin-top: 20px;
+    margin: 20px 10px;
+    width: 93%;
 }
 
 input[type= submit]:hover {
@@ -620,6 +636,8 @@ input[type= submit]:active {
     display: flex;
     justify-content: center;
     align-items: center;
+    min-width: 20px;
+    min-height: auto;
 }
 
 .footer > .container-Footer-Imagens > :nth-child(3) {
@@ -632,7 +650,142 @@ input[type= submit]:active {
     text-align: center;
     margin: 20px 0px;
     color:rgba(0, 0, 0, 0.2);
+    font-size: 1.5rem;
 }
 
 /* #endregion Footer */
+
+/* SEÇÃO PARA MEDIAS */
+/* #region Medias */
+
+/* Quebra cards coloridos em 1 coluna quando for abaixo de 1000px */
+
+@media (min-width: 1000px){
+    .main > .grid-cardsColoridos > .cardsColoridos {
+        margin: 5%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(5, 100px);
+        grid-gap: 20px 40px;
+    }
+}
+
+/* Quebra a tabela com bordas em 1 coluna quando for abaixo de 936px */
+
+@media (max-width: 936px) {
+    .main > .tabela-Bordas {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 2% 15%;
+        text-align: center;
+    }
+}
+
+/* Transforma os cartões com icones de coluna para linha quando for abaixo de 770px */
+
+@media (max-width: 770px) {
+    .main > .containerCartoes {
+        display: flex;
+        flex-direction: column;
+      }
+      
+      .main > .containerCartoes > :nth-child(n) {
+         display: flex;
+         flex-direction: row;
+         align-items: center;
+         margin-bottom: 20px;
+      }
+
+      .main > .containerCartoes > :nth-child(n) > .icone {
+          order: 3;
+          min-width: 50px;
+          min-height: 50px;
+      }
+
+      .main > .containerCartoes > :nth-child(n) > .cards-elementos {
+          align-items: flex-start;
+          min-width: 320px;
+          margin-left: 15px;
+      }
+
+      .main > .containerCartoes > :nth-child(n) > .cards-elementos p {
+        text-align: left;
+      }
+
+}
+
+/* Cria a navegação hamburger, esconde o nav e a logomarca quando for abaixo de 768px */
+
+@media (max-width: 768px) {
+
+    /* Hamburger */
+    .flex-container-header > img {
+        display: none;
+    }
+
+    nav {
+        display: none;
+    }
+
+    .one, .two, .three {
+        background-color: white;
+        height: 5px;
+        width: 100%;
+        margin: 6px auto;
+    }
+
+   .menu-toggle {
+        width: 40px;
+        height: 30px;
+        margin-left: 8%;
+        position: absolute;
+        top: 0.5%;
+        left: 0;
+    }
+
+    /* Esconde 4 cards coloridos quando estiver visão mobile */
+    
+    .main > .grid-cardsColoridos > .cardsColoridos > :nth-child(7) {
+        display: none;
+    }
+    
+    .main > .grid-cardsColoridos > .cardsColoridos > :nth-child(8) {
+        display: none;
+    }
+    
+    .main > .grid-cardsColoridos > .cardsColoridos > :nth-child(9) {
+        display: none;
+    }
+    
+    .main > .grid-cardsColoridos > .cardsColoridos > :nth-child(10) {
+        display: none;
+    }
+
+}
+
+/* Media para Landing Page - Deixa o logo no meio quando for mobile */
+
+@media (max-width: 427px) {
+    .main > .landingPage {
+        text-align: center;
+    }
+
+    .main > .landingPage > #landingPage-Logomarca {
+        position: absolute;
+        bottom: 8%;
+        right: 55%;
+        align-items: center;
+    }
+
+}
+
+@media (max-width: 400px){
+    html {
+        font-size: 50%;
+    }
+}
+
+/* #endregion medias */
 
